concord_macros/tests/v5/dsl/fail/fail_map_before_response.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client MapBeforeResponseApi { base https "example.com" }

    GET Broken
        path ["broken"]
        map String { r }
        -> Json<String>
}

fn main() {}
