concord_macros/tests/v5/dsl/fail/fail_map_before_response.stderr
error: endpoint declarations must use `METHOD Name(...) -> Response { ... }` (or `METHOD Name -> Response { ... }`)
 --> tests/v5/dsl/fail/fail_map_before_response.rs:9:9
  |
9 |         map String { r }
  |         ^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/v5/dsl/fail/fail_map_before_response.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
